force-app/main/default/objects/Opportunity/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>OpportunityLineItem__c.Amount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>