force-app/main/default/objects/Opportunity/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The end date of the project related to the opportunity</description>
    <label>EndDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>