force-app/main/default/objects/Opportunity/fields/New_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Field__c</fullName>
    <description>for testing purposes</description>
    <label>New Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>