force-app/main/default/objects/Opportunity/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The start date of the project</description>
    <label>StartDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>